# Autonomous-AI-Incident-Commander

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/adr/: 0001-src-layout-and-fake-model-default.md
docs/api/: health.md
docs/architecture/: domain-model.md  overview.md  portability.md
docs/evaluation/: methodology.md  scenarios.md
docs/safety/: threat-model.md
scripts/: generate_stage2_scenarios.py
servers/: __init__.py
servers/deployment_mcp/: __init__.py  metadata.py
servers/incident_management_mcp/: __init__.py  metadata.py
servers/knowledge_mcp/: __init__.py  metadata.py
servers/observability_mcp/: __init__.py  metadata.py
servers/source_control_mcp/: __init__.py  metadata.py
src/incident_commander/: __init__.py  config.py  logging.py  main.py
src/incident_commander/agents/: __init__.py
src/incident_commander/api/: __init__.py  deps.py
src/incident_commander/api/routes/: __init__.py  health.py
src/incident_commander/cli/: __init__.py  __main__.py
src/incident_commander/domain/: __init__.py  enums.py  exceptions.py  reducers.py  transitions.py  types.py
src/incident_commander/domain/models/: __init__.py  evidence.py  execution.py  hypothesis.py  impact.py  incident.py  investigation.py  remediation.py  report.py  state.py
src/incident_commander/evaluation/: __init__.py
src/incident_commander/fixtures/: __init__.py  loader.py  schema.py
src/incident_commander/fixtures/scenarios/: __init__.py
src/incident_commander/fixtures/scenarios/connection-pool-exhaustion/: code_changes.json  configuration.json  deployments.json  historical_incidents.json  incident.json  logs.json  manifest.json  metrics.json  runbooks.json  seed_evidence.json  traces.json
src/incident_commander/fixtures/scenarios/feature-flag-misconfiguration/: code_changes.json  configuration.json  deployments.json  historical_incidents.json  incident.json  logs.json  manifest.json  metrics.json  runbooks.json  seed_evidence.json  topology.json  traces.json
src/incident_commander/fixtures/scenarios/insufficient-evidence/: code_changes.json  configuration.json  deployments.json  historical_incidents.json  incident.json  logs.json  manifest.json  metrics.json  runbooks.json  seed_evidence.json  traces.json
src/incident_commander/fixtures/scenarios/payment-service-timeout/: code_changes.json  configuration.json  deployments.json  historical_incidents.json  incident.json  logs.json  manifest.json  metrics.json  runbooks.json  seed_evidence.json  traces.json
src/incident_commander/graph/: __init__.py
src/incident_commander/mcp_clients/: __init__.py
src/incident_commander/models/: __init__.py  health.py  llm.py
src/incident_commander/observability/: __init__.py
src/incident_commander/persistence/: __init__.py
src/incident_commander/safety/: __init__.py
src/incident_commander/services/: __init__.py  health.py
src/incident_commander/services/llm/: __init__.py  anthropic_adapter.py  base.py  fake.py
tests/: conftest.py
tests/contract/: test_mcp_metadata.py
tests/unit/: test_anthropic_adapter.py  test_api_health.py  test_cli.py  test_domain_serialization.py  test_domain_validation.py  test_exceptions.py  test_fake_model.py  test_fixtures.py  test_health_service.py  test_reducers.py  test_settings.py  test_transitions.py
(+11 files in other folders)
