[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "incident-commander"
version = "0.1.0"
description = "Autonomous AI Incident Commander — agentic incident-response platform"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
  { name = "Tejasvi Nuthalapati" },
]
keywords = [
  "incident-response",
  "langgraph",
  "agents",
  "mcp",
  "observability",
  "fastapi",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "structlog>=24.4.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.8.0",
  "mypy>=1.13.0",
  "types-requests>=2.32.0",
  "httpx2>=2.0.0",
]
anthropic = [
  "anthropic>=0.39.0",
]
langgraph = [
  "langgraph>=0.2.0",
  "langchain-core>=0.3.0",
]

[project.scripts]
incident-commander = "incident_commander.cli.__main__:main"

[project.urls]
Homepage = "https://github.com/nuthalat/Autonomous-AI-Incident-Commander"
Documentation = "https://github.com/nuthalat/Autonomous-AI-Incident-Commander#readme"
Repository = "https://github.com/nuthalat/Autonomous-AI-Incident-Commander"
Issues = "https://github.com/nuthalat/Autonomous-AI-Incident-Commander/issues"
Changelog = "https://github.com/nuthalat/Autonomous-AI-Incident-Commander/blob/dev/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/incident_commander", "servers"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/servers",
  "/tests",
  "/docs",
  "/README.md",
  "/LICENSE",
  "/CHANGELOG.md",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "servers", "tests"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
  "N",   # pep8-naming
  "ASYNC",
  "S",   # bandit
  "RUF",
]
ignore = [
  "S101", # assert used in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]

[tool.ruff.lint.isort]
known-first-party = ["incident_commander"]
force-single-line = false

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_reexport = true
pretty = true
show_error_codes = true
mypy_path = "src"
packages = ["incident_commander"]
exclude = [
  "tests/",
  "servers/",
]

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
]
markers = [
  "integration: integration tests requiring external services",
  "contract: contract tests for interfaces and schemas",
  "evaluation: evaluation harness tests",
]
filterwarnings = [
  "error",
  "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["incident_commander"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 0
